fix lp content alignment @ 576px

--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -91,4 +91,9 @@ footer {
     gap: 1rem;
   }
 
+  .content > section {
+    flex: 1 1 0;
+    min-width: 0;
+  }
+
 }
